build two more components

--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -12,6 +12,7 @@
 
 // font attributes declarations
     // font Weight
+    $fontw-light: 300;
     $fontw-regular: 400;
     $fontw-medium: 500;
     $fontw-sbold: 600;
