--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -15,8 +15,10 @@
 @import
 'components/atoms',
 'components/cards',
+'components/features',
 'components/header',
-'components/hero';
+'components/hero',
+'components/teamboard';
 
 
 // 4. Layouts
