--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -16,9 +16,11 @@
 'components/atoms',
 'components/cards',
 'components/features',
+'components/footer',
 'components/header',
 'components/hero',
-'components/teamboard';
+'components/teamboard',
+'components/testimonial';
 
 
 // 4. Layouts
