--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -37,6 +37,7 @@ html:focus-within {
 /* Set core body defaults */
 body {
   min-height: 100vh;
+  max-width: 100vw;
   text-rendering: optimizeSpeed;
   font-family: $primary-font;
   font-size: 100%;
