--- a/assets/scss/components/_cards.scss
+++ b/assets/scss/components/_cards.scss
@@ -2,7 +2,13 @@
     margin-top: rem(90px) !important;
 
     > h2 {
-        padding-left: 10%;
-        max-width: 80%;
+        max-width: rem(350px);
+    }
+
+    @include respond-to('large') {
+        &-list {
+            display: flex;
+            flex-direction: row;
+        }
     }
 }
